avoid horizontal scrolling

--- a/src/views/static/scss/index.scss
+++ b/src/views/static/scss/index.scss
@@ -2,6 +2,10 @@
 
 
 .teagradezco{
+  .row{
+    max-width: 100%;
+  }
+
 	.main-section{
 		margin-top: 50px;
 		margin-bottom: 42px;
